--- a/GroundBook.html
+++ b/GroundBook.html
@@ -259,14 +259,78 @@
                             <div class="tg-player-grid2 tg-haslayout">
                                 <div id="popularVenues" class="tg-player-slider tg-haslayout">
                                     <div class="swiper-wrapper">
+
                                         <div class="swiper-slide">
                                             <figure class="tg-postimg">
-                                                <img src="images/blog/img-03.jpg" alt="image description">
+                                                <img src="images/gallery2/img-06.jpg" alt="image description">
+                                                <figcaption class="tg-img-hover">
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
+                                                    <div class="tg-section-heading">
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf 3</a></h3>
+                                                        <span class="tg-stars"><span></span></span>
+                                                    </div>
+                                                    <div class="tg-description">
+                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
+                                                    </div>
+                                                    <ul class="tg-socialicons">
+                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <figure class="tg-postimg">
+                                                <img src="images/gallery2/img-07.jpg" alt="image description">
+                                                <figcaption class="tg-img-hover">
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
+                                                    <div class="tg-section-heading">
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf 4</a></h3>
+                                                        <span class="tg-stars"><span></span></span>
+                                                    </div>
+                                                    <div class="tg-description">
+                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
+                                                    </div>
+                                                    <ul class="tg-socialicons">
+                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <figure class="tg-postimg">
+                                                <img src="images/gallery2/img-08.jpg" alt="image description">
+                                                <figcaption class="tg-img-hover">
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
+                                                    <div class="tg-section-heading">
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf 5</a></h3>
+                                                        <span class="tg-stars"><span></span></span>
+                                                    </div>
+                                                    <div class="tg-description">
+                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
+                                                    </div>
+                                                    <ul class="tg-socialicons">
+                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                                    </ul>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <figure class="tg-postimg">
+                                                <img src="images/gallery2/img-03.jpg" alt="image description">
                                                 <!--<div class="tg-img-hover">-->
                                                 <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
                                                     <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf </a></h3>
                                                         <span class="tg-stars"><span></span></span>
                                                     </div>
                                                     <div class="tg-description">
@@ -284,11 +348,11 @@
                                         </div>
                                         <div class="swiper-slide">
                                             <figure class="tg-postimg">
-                                                <img src="images/blog/img-04.jpg" alt="image description">
+                                                <img src="images/gallery2/img-04.jpg" alt="image description">
                                                 <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
                                                     <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf 1</a></h3>
                                                         <span class="tg-stars"><span></span></span>
                                                     </div>
                                                     <div class="tg-description">
@@ -305,116 +369,11 @@
                                         </div>
                                         <div class="swiper-slide">
                                             <figure class="tg-postimg">
-                                                <img src="images/blog/img-05.jpg" alt="image description">
+                                                <img src="images/gallery2/img-05.jpg" alt="image description">
                                                 <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
+                                                    <a href="#" class="tg-theme-tag">Popular</a>
                                                     <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
-                                                        <span class="tg-stars"><span></span></span>
-                                                    </div>
-                                                    <div class="tg-description">
-                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
-                                                    </div>
-                                                    <ul class="tg-socialicons">
-                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                                    </ul>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <figure class="tg-postimg">
-                                                <img src="images/blog/img-06.jpg" alt="image description">
-                                                <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
-                                                    <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
-                                                        <span class="tg-stars"><span></span></span>
-                                                    </div>
-                                                    <div class="tg-description">
-                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
-                                                    </div>
-                                                    <ul class="tg-socialicons">
-                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                                    </ul>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <figure class="tg-postimg">
-                                                <img src="images/blog/img-07.jpg" alt="image description">
-                                                <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
-                                                    <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
-                                                        <span class="tg-stars"><span></span></span>
-                                                    </div>
-                                                    <div class="tg-description">
-                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
-                                                    </div>
-                                                    <ul class="tg-socialicons">
-                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                                    </ul>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <figure class="tg-postimg">
-                                                <img src="images/blog/img-08.jpg" alt="image description">
-                                                <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
-                                                    <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
-                                                        <span class="tg-stars"><span></span></span>
-                                                    </div>
-                                                    <div class="tg-description">
-                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
-                                                    </div>
-                                                    <ul class="tg-socialicons">
-                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                                    </ul>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <figure class="tg-postimg">
-                                                <img src="images/blog/img-09.jpg" alt="image description">
-                                                <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
-                                                    <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
-                                                        <span class="tg-stars"><span></span></span>
-                                                    </div>
-                                                    <div class="tg-description">
-                                                        <p>Incididunt utia labore et dolore siti magna aliqua adinim lipat</p>
-                                                    </div>
-                                                    <ul class="tg-socialicons">
-                                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                                    </ul>
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <figure class="tg-postimg">
-                                                <img src="images/blog/img-10.jpg" alt="image description">
-                                                <figcaption class="tg-img-hover">
-                                                    <a href="#" class="tg-theme-tag">SWEEPER</a>
-                                                    <div class="tg-section-heading">
-                                                        <h3><a href="#">Hustlin’ Owls</a></h3>
+                                                        <h3><a href="#">Sportiana Sports Arena - Turf 2</a></h3>
                                                         <span class="tg-stars"><span></span></span>
                                                     </div>
                                                     <div class="tg-description">
