--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 <div class="tg-btnbox">
                                     <h2>from june 27</h2>
                                     <a class="tg-btn" href="#"><span>read more</span></a>
-                                    <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                    <a class="tg-btn" href="#"><span>Register Now</span></a>
                                 </div>
                             </div>
                         </div>-->
@@ -547,10 +547,112 @@
             </section>
 
 
-            <section class=" tg-haslayout tg-bgstyleone">
-                <div class="tg-bgboxone"></div>
-                <div class="tg-bgboxtwo"></div>
-                <div class="tg-bgpattrant">
+            <section class=" tg-haslayout tg-bgstyleone position-relative">
+                <div class="dark-layer"></div>
+                <div class="tg-bgpattrant-2">
+                    <div class="tg-main-section tg-haslayout">
+                    <div class="container position-relative">
+                       <div class="row">
+                           <div class="col-md-12">
+                               <div class="tg-footercol">
+                                   <div class="tg-posttitle">
+                                       <h3>Top products</h3>
+                                   </div>
+                                   <div class="row">
+                                       <div class="col-md-6">
+                                           <div class="tg-toprated">
+                                               <ul>
+
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/features/img-05.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/thumbnails/img-06.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/thumbnails/img-07.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                               </ul>
+                                           </div>
+                                       </div>
+                                       <div class="col-md-6">
+                                           <div class="tg-toprated">
+                                               <ul>
+
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/thumbnails/img-05.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/thumbnails/img-06.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                                   <li>
+                                                       <figure>
+                                                           <a href="#">
+                                                               <img src="images/thumbnails/img-07.jpg" alt="image description">
+                                                           </a>
+                                                       </figure>
+                                                       <div class="tg-productcontent">
+                                                           <h4><a href="#">Smooth 3-Stripes Scarf</a></h4><span class="tg-stars"><span></span></span>
+                                                           <span class="tg-price">Price: $67</span>
+                                                       </div>
+                                                   </li>
+                                               </ul>
+                                           </div>
+                                       </div>
+                                   </div>
+                                   
+                               </div>
+                           </div>
+                       </div>
+                    </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class=" tg-haslayout tg-bgstyleone position-relative d-none">
+                <div class="dark-layer"></div>
+                <div class="tg-bgpattrant-2">
                     <div class="container position-relative">
                         <div class="row">
                             <div id="tg-player-slider" class="tg-player-slider tg-haslayout" style="padding: 40px 0;">
@@ -564,14 +666,14 @@
                                             </div>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <div class="tg-contentbox">
-                                                    <div class="tg-section-heading"><h2>Gladiators <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-section-heading"><h2>FITNESS <span>&</span> EVENTS</h2></div>
                                                     <div class="tg-description">
                                                         <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                                     </div>
 
                                                     <div class="tg-btnbox">
                                                         <a class="tg-btn" href="#"><span>read more</span></a>
-                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                        <a class="tg-btn" href="#"><span>Register Now</span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -587,14 +689,14 @@
                                             </div>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <div class="tg-contentbox">
-                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-section-heading"><h2><span>Yoga</span></h2></div>
                                                     <div class="tg-description">
                                                         <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                                     </div>
 
                                                     <div class="tg-btnbox">
                                                         <a class="tg-btn" href="#"><span>read more</span></a>
-                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                        <a class="tg-btn" href="#"><span>Register Now</span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -610,14 +712,14 @@
                                             </div>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <div class="tg-contentbox">
-                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-section-heading"><h2>Football <span>or</span> Soccers</h2></div>
                                                     <div class="tg-description">
                                                         <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                                     </div>
 
                                                     <div class="tg-btnbox">
                                                         <a class="tg-btn" href="#"><span>read more</span></a>
-                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                        <a class="tg-btn" href="#"><span>Register Now</span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -633,14 +735,14 @@
                                             </div>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <div class="tg-contentbox">
-                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-section-heading"><h2><span>Cricket</span></h2></div>
                                                     <div class="tg-description">
                                                         <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                                     </div>
 
                                                     <div class="tg-btnbox">
                                                         <a class="tg-btn" href="#"><span>read more</span></a>
-                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                        <a class="tg-btn" href="#"><span>Register Now</span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -651,20 +753,18 @@
                             </div>
 
                         </div>
-                        <div class="tg-themebtnnext" style="border-color:#eee"><span class="fa fa-angle-down text-white"></span></div>
-                        <div class="tg-themebtnprev swiper-button-disabled" style="border-color:#eee"><span class="fa fa-angle-up text-white"></span></div>
+                        <div class="tg-themebtnnext mb-3" style="border-color:#eee"><span class="fa fa-angle-down text-white"></span></div>
+                        <div class="tg-themebtnprev mb-3" style="border-color:#eee"><span class="fa fa-angle-up text-white"></span></div>
                     </div>
                 </div>
             </section>
-
-            
 
 
 
             <section class="tg-main-section tg-haslayout full-pattern">
                 <div class="container">
                     <div class="tg-section-name">
-                        <h2>Get It On</h2>
+                        <h2>Get It Now</h2>
                     </div>
                     <div class="col-sm-11 col-xs-11 pull-right">
                         <div class="row">
@@ -678,9 +778,9 @@
                                     <div class="col-md-6 col-sm-12 col-xs-12 d-flex align-items-center">
                                         <div class="tg-contentbox">
                                             <div class="tg-section-heading">
-                                                <h2>
-                                                    THE BEST FITNESS THEME WITH ALL THE NECESSARY IN-BUILT FEATURES
-                                                </h2>
+                                                <h1>
+                                                    Download Sportiana Now!
+                                                </h1>
                                             </div>
 
                                             <div class="tg-description">
